Agregué la ruta en .env

--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,5 @@ DB_PASSWORD=''
 DB_HOST='127.0.0.1'
 DB_DIALECT='mysql'
 
-WHITELIST = ['http://localhost:3000']
+ROUTE='/depacomp-api/v1'
+WHITELIST=['http://localhost:3000']
