signUP - signIN Usuario

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+# DB Config
 PORT=4000
 
 DB_NAME='depacomp'
@@ -8,3 +9,9 @@ DB_DIALECT='mysql'
 
 ROUTE='/depacomp-api/v1'
 WHITELIST=['http://localhost:3000']
+
+
+# Auth Config
+AUTH_SECRET='zalocin'
+AUTH_EXPIRES='1d'
+AUTH_ROUNDS=10
