--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,8 +1,8 @@
 const path = require('path');
 
 module.exports = {
-  'config': path.resolve('config', 'database.js'),
-  'models-path': path.resolve('app', 'models'),
-  'seeders-path': path.resolve('app', 'database', 'seeders'),
-  'migrations-path': path.resolve('app', 'database', 'migrations')
+  'config': path.resolve('src/config/', 'database.js'),
+  'models-path': path.resolve('src/app/', 'models'),
+  'seeders-path': path.resolve('src/app/database', 'seeders'),
+  'migrations-path': path.resolve('src/app/database', 'migrations')
 }
