Change .env.example para postgreSql / constantes , correccion relacion tabla provincia/pais

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,33 @@
 # DB Config
 PORT=4000
 
-DB_NAME='depacomp'
-DB_USERNAME='root'
-DB_PASSWORD=''
-DB_HOST='127.0.0.1'
-DB_DIALECT='mysql'
+#postgresSql
+DB_NAME=depacomp
+DB_USERNAME=potgres
+DB_PASSWORD=root
+DB_HOST=127.0.0.1
+DB_DIALECT=postgres
 
-ROUTE='/depacomp-api/v1'
+#mySql
+DB_NAME=depacomp
+DB_USERNAME=root
+DB_PASSWORD=''
+DB_HOST=127.0.0.1
+DB_DIALECT=mysql
+
+
+VERSION=v1
+ROUTE=/depacomp-api/$VERSION
+
 WHITELIST=['http://localhost:3000']
 
 
+
 # Auth Config
-AUTH_SECRET='zalocin'
-AUTH_EXPIRES='1d'
+AUTH_SECRET=zalocin
+AUTH_EXPIRES=1d
 AUTH_ROUNDS=10
+
+
+
+
