arreglo .env example

--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@ DB_HOST=127.0.0.1
 DB_DIALECT=mysql
 
 
-VERSION=v1
+VERSION=/v1
 ROUTE=/depacomp-api/$VERSION
 
 WHITELIST=['http://localhost:3000']
