--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "app.js",
     "dev": "nodemon app.js",
     "db:reset": "npx sequelize-cli db:drop && npx sequelize-cli db:create && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all",
-    "all": "npm run db:reset && npm run dev"
+    "all": "npm run db:reset && npm run dev",
+    "test": "mocha \"src/tests/**/*.test.js\""
   },
   "keywords": [],
   "author": "",
@@ -24,7 +26,10 @@
     "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
     "nodemon": "^2.0.19",
-    "sequelize-cli": "5.5.1"
+    "sequelize-cli": "5.5.1",
+    "sqlite3": "^5.1.6"
   }
 }
