--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon app.js",
     "db:reset": "npx sequelize-cli db:drop && npx sequelize-cli db:create && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all",
     "all": "npm run db:reset && npm run dev",
-    "test": "jest --detectOpenHandles --forceExit"
+    "test": "jest --detectOpenHandles --silent"
   },
   "keywords": [],
   "author": "",
