Corregi relaciones de tablas para que funcione.

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ PORT=4000
 #postgresSql
 DB_NAME=depacomp
 DB_USERNAME=potgres
-DB_PASSWORD=root
+DB_PASSWORD=D=root
 DB_HOST=127.0.0.1
 DB_DIALECT=postgres
 
