--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mysql2": "^2.3.3",
     "sequelize": "^6.31.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^4.6.0"
+    "swagger-ui-express": "^4.6.0",
+    "winston": "^3.9.0"
   },
   "devDependencies": {
     "jest": "^29.5.0",
